2007-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-atmarkit.el (shimbun-get-headers): New method to process
	redirections of URLs given by RSS feeds.

2007-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-content-start)
	(shimbun-nytimes-content-end): Abolish.
	(shimbun-nytimes-group-table): Remove additional.multimedia group.
	(shimbun-clear-contents): Don't use parent function to extract article
	contents; don't miss headline image and caption; remove useless things
	further; add page delimiters.
	(shimbun-get-headers): Show the group name in the From header.

	* shimbun.el (shimbun-end-of-tag): New function.

2007-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el: New file.

	* shimbun.el (shimbun-newspaper): New class.

2007-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yomiuri.el (shimbun-clear-contents): Break long lines.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Use generic urls for book
	and rss groups.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-airs.el (shimbun-airs-concat-url): Don't use old-style backquotes.

	* sb-chalow.el (shimbun-chalow-get-headers): Don't use old-style
	backquotes.

	* sb-debian.el (shimbun-debian-get-headers): Don't use old-style
	backquotes.

	* sb-digiko.el (shimbun-digiko-get-headers): Don't use old-style
	backquotes.

	* sb-javaconf.el (shimbun-javaconf-concat-url): Don't use old-style
	backquotes.

	* sb-mhonarc.el (shimbun-mhonarc-extract-header-values): Don't use
	old-style backquotes.

	* sb-tdiary-ml.el (shimbun-tdiary-ml-concat-url): Don't use old-style
	backquotes.

	* sb-tdiary.el (shimbun-tdiary-get-headers, shimbun-tdiary-make-date):
	Don't use old-style backquotes.

	* sb-wikimedia.el (shimbun-wikimedia-concat-url): Don't use old-style
	backquotes.

2007-08-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* sb-tigris.el (shimbun-make-contents): Use forward-line instead of
	next|previouse-line.
